# CoTeDe

./: .gitignore  bio_profile_CTD.py  cotede_test.py  dat4805001.cnv  main.py  pyproject.toml  setup.py  uat4805001.cnv
cotede/: __init__.py  qc.py
cotede/qctests/: woa_normbias.py
cotede/utils/: config.py  utils.py
docs/notebooks/: Dat4805179.CNV  GenericDataObject.ipynb  bio_profile_CTD.ipynb  bio_profile_CTD.py  profile_CTD.ipynb  profile_CTD.py  pyproject.toml
tests/: test_load_cfg.py  test_qccfg.py
