[project]
name = "cotede"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.1",
    "gsw>=3.6.20",
    "importlib>=1.0.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "oceansdb>=0.8.15",
    "scipy>=1.16.3",
    "seabird>=0.12.0",
    "shapely>=2.1.2",
]
