[project]
name = "cotede"
dynamic = ["version"]
description = "Quality Control of Oceanographic Data"
readme = "README.rst"
requires-python = ">=3.8"

# SPDX license expression (required format)
license = "MIT"

# Explicitly list license files included in the distribution
license-files = ["LICENSE.rst"]

keywords = [
  "oceanography",
  "ocean data",
  "Quality Control",
  "CTD"
]

authors = [
  { name = "Guilherme Castelão", email = "guilherme@castelao.net" }
]

classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "bokeh>=3.1.1",
  "Click>=6.6",
  "gsw>=3.6.20",
  "matplotlib>=3.7.5",
  "numpy>=1.20",
  "oceansdb >= 0.8.13",
  "scipy >= 1.0.0",
  "shapely>=2.0.7",
]
